force-app/main/default/objects/SalesStrategy__c/SalesStrategy__c.object-meta.xml
<CustomObject>
    <label>攻略方針</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>攻略方針名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>