force-app/main/default/objects/SalesStrategy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>攻略方針</relationshipLabel>
    <relationshipName>SalesStrategyAccount</relationshipName>
    <type>Lookup</type>
</CustomField>