force-app/main/default/objects/SalesStrategy__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>顧客</label>
    <type>TextArea</type>
</CustomField>